# cobol-archaeologist

./: .gitignore  Dockerfile  README.md  dev.ps1  pyproject.toml  render.yaml  requirements.txt
data/: .gitignore  README.md  download.ps1  manifest.json
data/index/: chunks.jsonl  vectors.npy
data/processed/: carddemo_blocks.jsonl  logic_blocks.jsonl  sources.csv
data/reports/: inferred_cards.jsonl
data/scripts/: generate_synthetic_datasets.py
examples/: run_end_to_end.py
notebooks/: Modelfile.cobol-archaeologist
outputs/: baseline_predictions.jsonl  finetune_train.jsonl  smoke_test.jsonl
reports/: cards.jsonl  cbsa_cards.jsonl  eval_report.md  eval_results.jsonl  eval_summary.json  phase9_plan.md
reports/compare_ollama_code-only/: eval_report.md
reports/compare_ollama_p_static/: eval_report.md
reports/compare_ollama_p_static_p_rag/: eval_report.md  eval_summary.json
results/: carddemo_cards.jsonl  comparison_table.md
results/compare_echo_(heuristic)/: eval_report.md  eval_results.jsonl  eval_summary.json
results/compare_ollama_code-only/: eval_results.jsonl  eval_summary.json
results/compare_ollama_p_static/: eval_results.jsonl  eval_summary.json
results/compare_ollama_p_static_p_rag/: eval_results.jsonl
scripts/: Modelfile.cobol-archaeologist  finetune_lora.ipynb  retrain.sh
src/: train.py
src/cobol_archaeologist/: __init__.py  cli.py  schemas.py
tests/: test_chunker.py  test_cleaner.py  test_eval_metrics.py  test_paragraphs.py  test_runner.py  test_schemas.py  test_static_analysis.py  test_weak_labels.py
(+23 files in other folders)
